RESOLVED FIXED241044
Fix a11y build warnings
https://bugs.webkit.org/show_bug.cgi?id=241044
Summary Fix a11y build warnings
Michael Catanzaro
Reported 2022-05-27 14:00:22 PDT
Two new build warnings introduced today and yesterday: [1141/2253] Building CXX object Source/WebCore/CMakeFiles/...ivedSources/unified-sources/UnifiedSource-aba958d6-5.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/GNOME-gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-aba958d6-5.cpp:3: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp: In member function ‘void WebCore::AXObjectCache::postPlatformNotification(WebCore::AXCoreObject*, AXNotification)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:74:12: warning: enumeration value ‘AXDescribedByChanged’ not handled in switch [-Wswitch] 74 | switch (notification) { | ^ /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:74:12: warning: enumeration value ‘AXHasPopupChanged’ not handled in switch [-Wswitch] [1144/2253] Building CXX object Source/WebCore/CMakeFiles/...ivedSources/unified-sources/UnifiedSource-aba958d6-1.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/GNOME-gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-aba958d6-1.cpp:3: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/AXObjectCache.cpp: In static member function ‘static WebCore::AXRelationType WebCore::AXObjectCache::symmetricRelation(WebCore::AXRelationType)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/AXObjectCache.cpp:3731:1: warning: control reaches end of non-void function [-Wreturn-type] 3731 | } | ^
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-27 14:00:32 PDT
Michael Catanzaro
Comment 2 2022-05-27 14:02:09 PDT
EWS
Comment 3 2022-05-30 06:00:44 PDT
Committed r295024 (251119@main): <https://commits.webkit.org/251119@main> Reviewed commits have been landed. Closing PR #1122 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.