Fix a11y build warnings https://bugs.webkit.org/show_bug.cgi?id=241044

Patch by Michael Catanzaro <mcatanzaro@redhat.com> on 2022-05-30
Reviewed by Adrian Perez de Castro.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::symmetricRelation):
* Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):

Canonical link: https://commits.webkit.org/251119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295024 268f45cc-cd09-0410-ab3c-d52691b4dbfc